--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 
     <title>Rohadatul Aisy's Portofolio</title>
   </head>
-  <body id="home">
-    <div id="app">
+  <body id="app" v-if="true"> // tag vue
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark shadow fixed-top" style="background-color: #FCE38A">
       <div class="container">
@@ -37,7 +36,7 @@
               <a class="nav-link" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
+              <a class="nav-link" href="#contact">Portofolio</a>
             </li>
           </ul>
         </div>
@@ -47,11 +46,11 @@
 
     <!-- Jumbotron  -->
     <section class="jumbotron text-center">
-      <img src="img/aisy3.jpg" alt="Rohadaisy" width="200" class="rounded-circle" />
-      <h1 class="display-4">Rohadatul Aisy</h1>
-      <p class="lead">This is my first portofolio website 
-          <br /><span class="typed" data-typed-items="I am a student from Ahmad Dahlan University, Do you know? a Perfect Practice Makes Perfect, So don't stop practicing"></span></p>
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,96L60,85.3C120,75,240,53,360,80C480,107,600,181,720,213.3C840,245,960,235,1080,197.3C1200,160,1320,96,1380,64L1440,32L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
+      <img id="profil" v-bind:src="header.imageProfile" alt="Aisy" class="rounded-circle shadow-lg">
+      <h1 class="display-4">{{header.title}}</h1>
+      <p class="lead">{{header.desc}} </p>
+      <p class="lead"><br /><span class="typed" data-typed-items="I am a student from Ahmad Dahlan University, Do you know? a Perfect Practice Makes Perfect, So don't stop practicing"></span></p>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,96L60,85.3C120,75,240,53,360,80C480,107,600,181,720,213.3C840,245,960,235,1080,197.3C1200,160,1320,96,1380,64L1440,32L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
     </section>
     <!-- End Jumbotron -->
 
@@ -66,12 +65,10 @@
         <div>
           <div class="row justify-content-center fs-5 text-center">
             <div class="col-md-4">
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae eos distinctio eaque porro tenetur doloribus dolorum voluptates facilis. Enim, illum.</p>
+              <p>{{about1}}</p>
             </div>
             <div class="col-md-4">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium ratione quas deleniti, eligendi sed beatae nobis sunt consequatur laudantium libero. Eum consequuntur odio perferendis numquam dolorum commodi modi
-                voluptate praesentium.
+              <p>{{about2}}
               </p>
             </div>
           </div>
@@ -90,46 +87,17 @@
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3" v-for="item in projects">
             <div class="card">
-              <img src="img/projects/cat1.jpg" class="card-img-top" alt="project1" />
+              <img class="card-img-top" v-bind:src="item.image" alt="Card image cap"/>
               <div class="card-body">
-                <p class="card-text">"Loving yourself starts with liking yourself, which starts with respecting yourself, which starts with thinking of yourself in positive ways." - Jerry Corsten</p>
+                <h5 class="card-title">{{item.title}}</h5>
+                <p class="card-text">{{item.desc}}</p>
+                <a href="#" class="btn btn-primary">Read</a>
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="img/projects/cat5.jpg" class="card-img-top" alt="project2" />
-              <div class="card-body">
-                <p class="card-text">"Don't forget;beautiful sunsets needs cloudy skies." - Paulo Coelho</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="img/projects/cat3.jpg" class="card-img-top" alt="project3" />
-              <div class="card-body">
-                <p class="card-text">"Sometimes life doesn't give you what you want, not because you don't deserve it, but because you deserve so much more."</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="img/projects/cat4.jpg" class="card-img-top" alt="project4" />
-              <div class="card-body">
-                <p class="card-text">"We have certainly created man in the best of stature." - At Tiin: 4</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="img/projects/cat2.jpg" class="card-img-top" alt="project5" />
-              <div class="card-body">
-                <p class="card-text">"You're your's yourself not theirs or anyone else."</p>
-              </div>
-            </div>
-          </div>
+        </div>
         </div>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,96L60,80C120,64,240,32,360,58.7C480,85,600,171,720,202.7C840,235,960,213,1080,202.7C1200,192,1320,192,1380,192L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
@@ -166,14 +134,13 @@
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#FCE38A" fill-opacity="1" d="M0,160L60,149.3C120,139,240,117,360,133.3C480,149,600,203,720,234.7C840,267,960,277,1080,266.7C1200,256,1320,224,1380,208L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
     </section>
-  <!-- End Contact -->
+    <!-- End Contact -->
 
     <!-- Footer -->
     <footer class="text-white text-center pb-5" style="background-color: #FCE38A">
       <p>Created with <i class="bi bi-hearts text-danger"></i> by <a href="https://instagram.com/rohadaisy?igshid=YmMyMTA2M2Y=" class="text-white fw-bold">Rohadatul Aisy</a></p>
     </footer>
     <!-- End Footer -->
-    </div>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -183,8 +150,12 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
+    <!-- Instalasi Vue-->
+    <script src="https://unpkg.com/vue@3"></script>
+
     <!-- Template Main JS File -->
-    <script src="assets/typed/typed.min.js"></script>
+    <script src="assets/typed.js/typed.min.js"></script>
     <script src="main.js"></script>
+
   </body>
 </html>
