--- a/index.html
+++ b/index.html
@@ -178,6 +178,6 @@
 
     <!-- Template Main JS File -->
     <script src="assets/typed.js/typed.min.js"></script>
-    <script src="./get_json.js"></script>
+    <script src="get_json.js"></script>
   </body>
 </html>
