--- a/index.html
+++ b/index.html
@@ -179,5 +179,9 @@
     <!-- Template Main JS File -->
     <script src="assets/typed.js/typed.min.js"></script>
     <script src="get_json.js"></script>
+    
+    <!-- Instalasi Axios -->
+    <script src="https://unpkg.com/vue@3"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </body>
 </html>
