--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
     <title>Rohadatul Aisy's Portofolio</title>
   </head>
-  <body id="app" v-if="true"> // tag vue
+  <body id="home">
+    <div id="app">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark shadow fixed-top" style="background-color: #FCE38A">
       <div class="container">
@@ -33,10 +34,10 @@
               <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#projects">Projects</a>
+              <a class="nav-link" href="#project">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Portofolio</a>
+              <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -46,11 +47,10 @@
 
     <!-- Jumbotron  -->
     <section class="jumbotron text-center">
-      <img id="profil" v-bind:src="header.imageProfile" alt="Aisy" class="rounded-circle shadow-lg">
-      <h1 class="display-4">{{header.title}}</h1>
-      <p class="lead">{{header.desc}} </p>
-      <p class="lead"><br /><span class="typed" data-typed-items="I am a student from Ahmad Dahlan University, Do you know? a Perfect Practice Makes Perfect, So don't stop practicing"></span></p>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,96L60,85.3C120,75,240,53,360,80C480,107,600,181,720,213.3C840,245,960,235,1080,197.3C1200,160,1320,96,1380,64L1440,32L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
+        <h1>{{ message }}</h1>
+        <h1>{{ jumbotron.nama }}</h1>
+        <h4>{{ jumbotron.description }}</h4>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,96L60,85.3C120,75,240,53,360,80C480,107,600,181,720,213.3C840,245,960,235,1080,197.3C1200,160,1320,96,1380,64L1440,32L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
     </section>
     <!-- End Jumbotron -->
 
@@ -59,17 +59,16 @@
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
-            <h2>About Me</h2>
+            <h2> {{about.title}} </h2>
           </div>
         </div>
         <div>
           <div class="row justify-content-center fs-5 text-center">
             <div class="col-md-4">
-              <p>{{about1}}</p>
+                <p>{{ about.description1 }}</p>
             </div>
             <div class="col-md-4">
-              <p>{{about2}}
-              </p>
+                <p>{{ about.description2 }}</p>
             </div>
           </div>
         </div>
@@ -78,62 +77,64 @@
     </section>
     <!-- End About -->
 
-    <!-- Project -->
-    <section id="projects">
-      <div class="container">
+    <!-- Articles -->
+    <section id="articles">
         <div class="row text-center mb-3">
           <div class="col">
-            <h2>My Projects</h2>
+            <h2> {{judul.article}} </h2>
           </div>
         </div>
-        <div class="row justify-content-center">
-          <div class="col-md-4 mb-3" v-for="item in projects">
-            <div class="card">
-              <img class="card-img-top" v-bind:src="item.image" alt="Card image cap"/>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+          <!--Card 1-->
+          <div class="col" v-for="item in articles">
+            <div class="card h-100">
+              <a v-bind:href="item.url" target="_blank">
+                <img v-bind:src="item.thumbnail" class="card-img-top" alt="..." height="">
+              </a>
               <div class="card-body">
-                <h5 class="card-title">{{item.title}}</h5>
-                <p class="card-text">{{item.desc}}</p>
-                <a href="#" class="btn btn-primary">Read</a>
+                <h5 class="card-title"> <a v-bind:href="item.url" target="_blank"
+                    style="font-size: x-large; text-decoration: none; color: black;">{{item.title}}</a></h5>
+                <p class="card-text">{{ item.description }}</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">{{item.published_at}}</small>
               </div>
             </div>
           </div>
         </div>
-        </div>
-      </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,96L60,80C120,64,240,32,360,58.7C480,85,600,171,720,202.7C840,235,960,213,1080,202.7C1200,192,1320,192,1380,192L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
-    </section>
-    <!-- End Project -->
+      </section>
+    <!-- End Articles -->
 
     <!-- Contact -->
     <section id="contact">
-      <div class="containter">
-        <div class="row text-center">
-          <div class="col mb-3">
-            <h2>Contact Me</h2>
+        <div class="containter">
+          <div class="row text-center">
+            <div class="col mb-3">
+              <h2>Contact Me</h2>
+            </div>
+          </div>
+          <div class="row justify-content-center">
+            <div class="col-md-6" style="font-size: larger">
+              <form>
+                <div class="form-group">
+                  <label for="name">Nama Lengkap</label>
+                  <input type="teks" class="form-control" id="exampleInputEmail1" aria-describedby="name" />
+                </div>
+                <div class="form-group">
+                  <label for="email">Email</label>
+                  <input type="email" class="form-control" id="email" aria-describedby="email" />
+                </div>
+                <div class="form-group">
+                  <label for="pesan">Pesan</label>
+                  <textarea class="form-control" id="pesan" rows="3"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Kirim</button>
+              </form>
+            </div>
           </div>
         </div>
-        <div class="row justify-content-center">
-          <div class="col-md-6" style="font-size: larger">
-            <form>
-              <div class="form-group">
-                <label for="name">Nama Lengkap</label>
-                <input type="teks" class="form-control" id="exampleInputEmail1" aria-describedby="name" />
-              </div>
-              <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" class="form-control" id="email" aria-describedby="email" />
-              </div>
-              <div class="form-group">
-                <label for="pesan">Pesan</label>
-                <textarea class="form-control" id="pesan" rows="3"></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary">Kirim</button>
-            </form>
-          </div>
-        </div>
-      </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#FCE38A" fill-opacity="1" d="M0,160L60,149.3C120,139,240,117,360,133.3C480,149,600,203,720,234.7C840,267,960,277,1080,266.7C1200,256,1320,224,1380,208L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
-    </section>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#FCE38A" fill-opacity="1" d="M0,160L60,149.3C120,139,240,117,360,133.3C480,149,600,203,720,234.7C840,267,960,277,1080,266.7C1200,256,1320,224,1380,208L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
+      </section>
     <!-- End Contact -->
 
     <!-- Footer -->
@@ -141,6 +142,7 @@
       <p>Created with <i class="bi bi-hearts text-danger"></i> by <a href="https://instagram.com/rohadaisy?igshid=YmMyMTA2M2Y=" class="text-white fw-bold">Rohadatul Aisy</a></p>
     </footer>
     <!-- End Footer -->
+    </div>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -150,12 +152,13 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <!-- Instalasi Vue-->
+    <!-- Instalasi Axios -->
     <script src="https://unpkg.com/vue@3"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <!-- Template Main JS File -->
     <script src="assets/typed.js/typed.min.js"></script>
-    <script src="main.js"></script>
+    <script src="./get_json.js"></script>
 
   </body>
 </html>
