--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
     <!-- Jumbotron  -->
     <section class="jumbotron text-center">
+      <img src="img/aisy3.jpg" alt="Rohadaisy" width="200" class="rounded-circle" />
         <h1>{{ message }}</h1>
         <h1>{{ jumbotron.nama }}</h1>
         <h4>{{ jumbotron.description }}</h4>
