--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
     <!-- Jumbotron  -->
     <section class="jumbotron text-center">
+      <img id="profil" v-bind:src="jumbotron.image" alt="Aisy" class="rounded-circle shadow-lg">
         <h1>{{ message }}</h1>
         <h1>{{ jumbotron.nama }}</h1>
         <h4>{{ jumbotron.description }}</h4>
